Blender 2.9 Eevee motion blur doesn't take in account subframes when calculates its position #80086

Closed
opened 2020-08-24 21:09:40 +02:00 by Andrey Sokolov · 7 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.67

Blender Version
Broken: version: 2.90.0 Beta, branch: master, commit date: 2020-07-23 18:40, hash: 9cbf43801b
Worked: (newest version of Blender that worked as expected)

Short description of error
With scene.frame_set() Eevee motion blur takes in account only the current frame and ignores the subframe when calculates its position. It makes rendered objects visually remain the same during the whole frame. The same issue in Blender 2.91.

Exact steps for others to reproduce the error

  • open the new default project
  • animate default Cube rotation between frames 1 and 10 (for example 0 degrees on the X axis at the frame 1 and 90 degrees at the frame 10)
  • in the Render Settings turn on Motion Blur, optionally increase Steps and Shutter
  • on the Timeline set Cursor to frame 5, hit "F12" to render Image
  • when render is finished in the render Viewport change the render slot to 2
  • open Python Console, type in: bpy.context.scene.frame_set(5, subframe=0.9) - and hit "Enter"
  • compare 2 render slots to ensure that they are identical, and the Cube's state hadn't changed
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.67 **Blender Version** Broken: version: 2.90.0 Beta, branch: master, commit date: 2020-07-23 18:40, hash: `9cbf43801b` Worked: (newest version of Blender that worked as expected) **Short description of error** With `scene.frame_set()` Eevee motion blur takes in account only the current frame and ignores the subframe when calculates its position. It makes rendered objects visually remain the same during the whole frame. The same issue in Blender 2.91. **Exact steps for others to reproduce the error** - open the new default project - animate default Cube rotation between frames 1 and 10 (for example 0 degrees on the X axis at the frame 1 and 90 degrees at the frame 10) - in the Render Settings turn on Motion Blur, optionally increase Steps and Shutter - on the Timeline set Cursor to frame 5, hit "F12" to render Image - when render is finished in the render Viewport change the render slot to 2 - open Python Console, type in: `bpy.context.scene.frame_set(5, subframe=0.9)` - and hit "Enter" - compare 2 render slots to ensure that they are identical, and the Cube's state hadn't changed
Author

Added subscriber: @Andrey_Sokolov

Added subscriber: @Andrey_Sokolov
Contributor

Added subscriber: @RedMser

Added subscriber: @RedMser

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm the problem.
Cycles considers subframes when rendering.
Here the file I used to test:
test_subframes.blend

I can confirm the problem. Cycles considers subframes when rendering. Here the file I used to test: [test_subframes.blend](https://archive.blender.org/developer/F8810983/test_subframes.blend)

This issue was referenced by ed96c59c20

This issue was referenced by ed96c59c20fb5f69edc9671b4efbcd4bf7f61ffb

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-10-13 18:09:24 +02:00
Thomas Dinges added this to the 2.91 milestone 2023-02-08 16:20:48 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80086
No description provided.